# flutter_ffi

./: README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  image_processing.cpp
android/app/src/main/kotlin/com/example/native_with_flutter/: MainActivity.kt
lib/: image_processing.dart  main.dart
web/: index.html
